// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test card ui structure Match its snapshot When all props exists 1`] = `
<Container>
  <Title
    id="card-title"
  >
    Lorem
  </Title>
  <Text
    id="card-body"
  >
    Ipsum.
  </Text>
</Container>
`;

exports[`Test card ui structure Match its snapshot When no props exists 1`] = `
<Container>
  <Title
    id="card-title"
  >
    Anonymous
  </Title>
  <Text
    id="card-body"
  />
</Container>
`;
